# YetAI

./: .bandit  .dockerignore  .gitignore  ACTION_PLAN.md  BET_VERIFICATION_FIXES.md  CICD_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUMMARY.md  DNS_SETUP.md  Dockerfile  ENVIRONMENT_REFACTORING.md  PLAYER_PROPS_IMPLEMENTATION.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_UPDATE.md  README.md  REAL_DATA_SETUP.md  S3_AVATAR_DEPLOYMENT.md  SETUP_COMPLETE.md  SPORTSBOOK_LINKING.md  STRIPE_SETUP.md  USER_MANAGEMENT.md  analytics_fix_marker.txt  create_test_users.py  create_test_users.sh  csv_import_endpoint.py  data_population_strategy.md  decode_qr.py  deploy.sh  deploy_complete_historical_data.txt  fetch_real_nfl_analytics.py  fetch_real_season_data.py  final-login-test.js  fix_analytics_calculations.py  fix_localhost_urls.py  fix_production_analytics.sql  login-test.js  nixpacks.toml  package-lock.json  plan.md  (+18 more)
backend/: .deployment-trigger  .dockerignore  .env.example  .env.production  .gitignore  404_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  DEPRECATED_bet_verification_service.py  Dockerfile  FINAL_FORMATTING_FIX.md  FORMATTING_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_BET_VERIFICATION.md  TESTING_GUIDE.md  YETAI_BETS_COMPLETE_WALKTHROUGH.md  alembic.ini  check_pending_bets.py  check_settled_results.py  create_player_analytics_table.sql  create_test_completed_games.py  data_audit.py  debug_api.py  debug_bets.py  debug_game_ids.py  deploy_2025_season.txt  deploy_analytics.txt  deploy_analytics_overhaul.txt  deploy_critical_fix.txt  deploy_formatting_fix.txt  deploy_percentage_fix.txt  endpoint_test_results_20250909_093014.json  endpoint_test_results_20250909_093040.json  endpoint_test_results_20250909_093421.json  endpoint_test_results_20250909_094026.json  endpoint_test_results_20250909_094034.json  endpoint_test_results_20250909_094119.json  endpoint_test_results_20250909_102702.json  endpoint_test_results_20250909_103326.json  endpoint_test_results_20250909_103852.json  (+50 more)
backend/alembic/: env.py
backend/alembic/versions/: 1cfb8dd64dbd_add_username_field_to_users_table.py  5bf429bc3438_add_parlay_legs_to_yetai_bets_table.py  6f9432b1809e_add_simplified_sleeper_sync_tables.py  78e4824aec46_merge_migration_heads.py  8bf475b1b59f_initial_migration_create_all_tables.py  93bbff37008d_add_is_hidden_field_to_user_model.py  a1b2c3d4e5f6_add_broadcast_fields_to_game_model.py  add_player_analytics_manual.py  add_trade_analyzer_tables.py  cd7b2d25598c_add_faab_settings_and_historical_data_.py  ed8098e2bdd1_remove_foreign_key_constraint_from_live_.py  f1c7135a00e0_add_temporary_2fa_fields_to_users_table.py  sleeper_sync_manual.py
backend/app/: __init__.py  main.py  main_backup.py
backend/app/api/: advanced_analytics.py  fantasy.py  fantasy_analytics.py  fantasy_v2.py  simple_trade_analyzer.py  trade_analyzer.py
backend/app/core/: auth.py  config.py  database.py  service_loader.py
backend/app/models/: bet_models.py  database_models.py  fantasy_models.py  fantasy_models_v2.py  live_bet_models.py  player_mapping.py  simple_unified_bet_model.py  sports_models.py
backend/app/services/: advanced_analytics_service.py  ai_chat_service.py  analytics_data_populator.py  auth_service.py  auth_service_db.py  avatar_service.py  bet_scheduler_service.py  bet_service.py  bet_service_db.py  bet_sharing_service.py  bet_verification_service.py  betting_analytics_service.py  cache_service.py  comprehensive_league_sync.py  data_pipeline.py  data_pipeline_fixes.py  email_service.py  espn_api_service.py  fantasy_pipeline.py  fantasy_service.py  fantasy_service_v2.py  game_monitor_service.py  (+27 more)
backend/migrations/: add_broadcast_info_to_games.sql  create_player_id_mapping.sql  fix_game_script_column.sql
backend/scripts/: MIGRATION_INSTRUCTIONS.md  add_is_hidden_column.sql  backfill_yetai_bet_game_ids.py  check_popular_games_data.py  expand_existing_data.py  fetch_real_nfl_data.py  fetch_todays_games.py  monitor_deployment.sh  populate_from_espn.py  populate_nfl_historical_data.py  populate_player_mappings.py  populate_with_mappings.py  run_migration.sh  setup_s3_bucket.py  setup_s3_bucket_no_acl.py  sync_games_now.py  validate_deployment.sh
backend/tests/: __init__.py  test_main.py
(+142 files in other folders)
